--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "lint:prettier:fix": "prettier --write .",
     "lint:eslint:check": "eslint .",
     "lint:eslint:fix": "eslint --fix .",
+    "test": "jest",
+    "test:watch": "jest --watchAll --runInBand --verbose",
+    "test:coverage": "jest --coverage",
     "services:up": "docker compose -f infra/compose.yaml up -d",
     "services:down": "docker compose -f infra/compose.yaml down",
     "services:logs": "docker compose -f infra/compose.yaml logs -f",
