--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "npm run services:up && npm run services:wait:database && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -11,21 +11,27 @@
     "lint:prettier:fix": "prettier --write .",
     "lint:eslint:check": "eslint .",
     "lint:eslint:fix": "eslint --fix .",
-    "test": "jest",
+    "test": "start-server-and-test dev http://localhost:3000 'jest --runInBand'",
     "test:watch": "jest --watchAll --runInBand --verbose",
     "test:coverage": "jest --coverage",
     "services:up": "docker compose -f infra/compose.yaml up -d",
     "services:down": "docker compose -f infra/compose.yaml down",
     "services:logs": "docker compose -f infra/compose.yaml logs -f",
     "services:ps": "docker compose -f infra/compose.yaml ps",
-    "services:restart": "docker compose -f infra/compose.yaml restart"
+    "services:restart": "docker compose -f infra/compose.yaml restart",
+    "services:wait:database": "node infra/scripts/wait-for-postgres.js",
+    "prepare": "husky",
+    "commit": "cz"
   },
   "dependencies": {
+    "@prisma/adapter-pg": "^7.0.1",
     "@prisma/client": "^7.0.0",
     "axios": "^1.13.2",
     "clsx": "^2.1.0",
+    "commitizen": "^4.3.1",
     "lucide-react": "^0.344.0",
     "next": "^14.2.0",
+    "pg": "^8.16.3",
     "prisma": "^7.0.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
@@ -33,10 +39,13 @@
     "zustand": "^4.5.7"
   },
   "devDependencies": {
+    "@commitlint/cli": "^20.1.0",
+    "@commitlint/config-conventional": "^20.0.0",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^20.11.0",
+    "@types/pg": "^8.15.6",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.0",
@@ -45,6 +54,7 @@
     "jest": "^30.2.0",
     "postcss": "^8.4.0",
     "prettier": "^3.2.0",
+    "start-server-and-test": "^2.1.3",
     "tailwindcss": "^3.4.0",
     "ts-jest": "^29.4.5",
     "typescript": "^5.3.0"
