--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.2.0",
     "jest": "^30.2.0",
@@ -58,5 +59,10 @@
     "tailwindcss": "^3.4.0",
     "ts-jest": "^29.4.5",
     "typescript": "^5.3.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
