--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.2.0",
+    "husky": "^9.1.7",
     "jest": "^30.2.0",
     "postcss": "^8.4.0",
     "prettier": "^3.2.0",
