--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "axios": "^1.13.2",
     "clsx": "^2.1.0",
     "commitizen": "^4.3.1",
+    "dotenv": "^17.2.3",
+    "dotenv-expand": "^12.0.3",
     "lucide-react": "^0.344.0",
     "next": "^14.2.0",
     "pg": "^8.16.3",
