--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,11 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", "vitest.config.ts", "**/*.test.ts", "**/*.test.tsx", "__tests__"]
+  "exclude": [
+    "node_modules",
+    "vitest.config.ts",
+    "**/*.test.ts",
+    "**/*.test.tsx",
+    "__tests__"
+  ]
 }
