--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "lint:prettier:fix": "prettier --write .",
     "lint:eslint:check": "eslint .",
     "lint:eslint:fix": "eslint --fix .",
-    "test": "start-server-and-test dev http://localhost:3000 'jest --runInBand'",
+    "test": "start-server-and-test dev:quiet http://localhost:3000 'jest --runInBand'",
     "test:watch": "jest --watchAll --runInBand --verbose",
     "test:coverage": "jest --coverage",
+    "dev:quiet": "npm run services:up && npm run services:wait:database && dotenv -e .env.development -- prisma generate && next dev > /dev/null 2>&1",
     "services:up": "docker compose -f infra/compose.yaml up -d",
     "services:down": "docker compose -f infra/compose.yaml down",
     "services:logs": "docker compose -f infra/compose.yaml logs -f",
